[package]
name = "speed-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
directories = "5.0"
indicatif = "0.17"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.16"
tokio = { version = "1.38", features = ["full"] }
toml = "0.8"
